Update sports courts addresses in index.html

--- a/index.html
+++ b/index.html
@@ -472,36 +472,36 @@
             });
         });
         
-        // Корты по видам спорта (проверенные адреса)
+        // РЕАЛЬНЫЕ корты из Google Maps
         const allCourts = {
             padel: [
-                {name: 'Padel Smash', address: 'Padel Smash, Bulevar Zorana Đinđića, Beograd'},
-                {name: 'Belgrade Padel Club', address: 'Belgrade Padel Club, Novi Beograd'},
-                {name: 'Ada Padel', address: 'Ada Ciganlija, Padel teren'},
-                {name: 'Flavium Sport', address: 'Flavium Sport, Beograd'},
-                {name: 'Padel Arena', address: 'Padel Arena, Zemun'},
-                {name: 'Sportski Centar 11. April', address: 'SC 11. April, Novi Beograd'},
-                {name: 'Master Padel Club', address: 'Master Padel, Beograd'}
+                {name: 'Balloon Coin', address: 'Milentija Popovića 72, Beograd'},
+                {name: 'Padel Smash Dorćol', address: 'Tadeuša Košćuška 63, Beograd 11000'},
+                {name: 'Think Padel', address: 'Ada ciganlija 5, Beograd 11000'},
+                {name: 'Belgrade Padel Club', address: 'Žorža Klemansoa 41, Beograd'},
+                {name: 'Padel Zona', address: 'Vojislava Ilića 86, Beograd 11000'},
+                {name: 'Big Padel', address: 'Savski nasip, Beograd 11070'},
+                {name: 'Padel Centar Košutnjak', address: 'Kneza Višeslava 72, Beograd 11030'}
             ],
             volleyball: [
-                {name: 'SC Novi Beograd', address: 'Sportski centar Novi Beograd'},
-                {name: 'Ada Volleyball', address: 'Ada Ciganlija, Odbojka'},
-                {name: 'Hala Pionir', address: 'Hala Pionir, Beograd'},
-                {name: 'SC 25. Maj', address: 'Sportski centar 25. Maj'},
+                {name: 'SC Novi Beograd', address: 'Bulevar Arsenija Čarnojevića, Novi Beograd'},
+                {name: 'Ada Volleyball', address: 'Ada Ciganlija, Odbojkaški tereni'},
+                {name: 'Hala Pionir', address: 'Pionirska 4, Dorćol, Beograd'},
+                {name: 'SC 25 Maj', address: 'Carigradska, Beograd'},
                 {name: 'Beach Volleyball Ada', address: 'Ada Ciganlija, Beach Volleyball'}
             ],
             football: [
-                {name: 'Arena Belgrade', address: 'Arena Sport, Novi Beograd'},
+                {name: 'SC 11 April', address: 'Bulevar Arsenija Čarnojevića, Novi Beograd'},
                 {name: 'Ada Football', address: 'Ada Ciganlija, Fudbalski tereni'},
-                {name: 'SportDepot', address: 'SportDepot, Beograd'},
-                {name: 'SC 11. April Football', address: 'SC 11. April, Fudbal'},
-                {name: 'Mini Football Merkur', address: 'Mini Football Merkur, Beograd'}
+                {name: 'SportDepot', address: 'Milutina Milankovića, Novi Beograd'},
+                {name: 'Taš', address: 'Jurija Gagarina, Novi Beograd'},
+                {name: 'Avalski Put', address: 'Avalski put, Beograd'}
             ],
             basketball: [
-                {name: 'Hala Pionir Basketball', address: 'Hala Pionir, Košarka'},
+                {name: 'Hala Pionir', address: 'Pionirska 4, Dorćol, Beograd'},
                 {name: 'Ada Basketball', address: 'Ada Ciganlija, Košarkaški tereni'},
-                {name: 'SC Novi Beograd', address: 'SC Novi Beograd, Košarka'},
-                {name: 'Avala Basketball', address: 'Avala, Košarkaški tereni'}
+                {name: 'SC Novi Beograd', address: 'Bulevar Arsenija Čarnojevića'},
+                {name: 'Ušće Park', address: 'Ušće, Novi Beograd'}
             ]
         };
         
